--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    /* background-color:white; */
+    background-color:aliceblue; 
 }
 h1{
     color: cyan;
@@ -12,4 +12,45 @@ img{
 }
 .organisations{
 background-color:aquamarine;
+}
+h1{
+    color: blue;
+    font-size: 50px;
+}
+.profile{
+width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid white;
+}
+
+.paragraph{
+    color: deepskyblue;
+    font-size: 30px;
+}
+.follow-me{
+    font-size: 50;
+    color: blue;
+}
+.about-me{
+    color: blue;
+    font-size: 50px;
+}
+.Skill{
+    color: blue;
+    font-size: 50px;
+}
+.skills{
+    color: deepskyblue;
+    font-size: 30px;  
+
+}
+.image{
+    width: 50px;
+    height: 50px;
+}
+.follow-me{
+    color: blue;
+    font-size: 50px;
 }
