--- a/style.css
+++ b/style.css
@@ -67,12 +67,41 @@ margin: 10px 15px;
 padding: 30px ;
 }
 /* My flex box propoerties */
-.container{
+/* .container{
     background-color:aqua;
-}
+} */
 .child{
-    background-color: blue;
+    background-color:blueviolet;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+/* Blue container */
+.Bluecontainer{
+    border: 3px blue solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.flexitems{
+    border: 2px orange solid;
+    margin: 5px;
+    height: 80px;
+    width: 50px;
+
+}
+.mine{
+    color: blue;
+}
+/* lastcontainer */
+.last{
+    border: 1px grey solid;
+    display: flex;
+    justify-content: center;
+}
+img{
+    width: 50px;
+    border-radius: 50%;
+    
 }
